public/css/custom.css
h1, h2, h3, body { font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, sans-serif; font-weight: 300; }

/* Header */
#header-container {
  height: 150px;
  background-image: url('../img/header.jpg');
  background-size: cover;
}
#header-container h1, h2, h3 { color: white; }
#header-container h1 {
  font-size: 50pt;
  margin-top: 45px;
}
#header-container h2 {
  float: right;
  font-size: 16pt;
  margin-top: -35px;
}
#header-container h3 {
  font-size: 13pt;
  color: rgba(255, 255, 255, 0.8);
  margin-top: -5px;
}
#header-container h3 a {
  color: white;
  text-decoration: none;
}

/* Grey rectangular box */
#main-container {
  min-height: 500px;
  border-top: 2px solid #bababa;
  border-bottom: 1px solid #bababa;

  /* Inset box shadow */
  -moz-box-shadow:inset 0 3px 0 #d3d3d3;
  -webkit-box-shadow:inset 0 3px 0 #d3d3d3;
  box-shadow:inset 0 3px 0 #d3d3d3;

  /* Gradient */
  background: #dbdbdb; /* Old browsers */
  background: -moz-linear-gradient(top,  #dbdbdb 0%, #f5f5f5 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dbdbdb), color-stop(100%,#f5f5f5)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #dbdbdb 0%,#f5f5f5 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #dbdbdb 0%,#f5f5f5 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #dbdbdb 0%,#f5f5f5 100%); /* IE10+ */
  background: linear-gradient(to bottom,  #dbdbdb 0%,#f5f5f5 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dbdbdb', endColorstr='#f5f5f5',GradientType=0 ); /* IE6-9 */
}

#main-container #main-container-row { padding-top: 20px; }
#main-container p.lead { font-size: 22pt; }
#main-container .display .heading { font-size: 15pt; }
#main-container .display .desc { font-size: 10pt; }
#main-container .display ul { list-style-type: none; }
#main-container .display input, label { display: inline; }
#main-container .display .thumb { padding-left: 25px; padding-bottom: 10px; }
#main-container .display .thumb input { display: inline; }
#main-container .display .thumb .heading { display: inline; }
#main-container .display #description {
  float: right;
  width: 350px;
  padding: 7px;
  background-color: rgba(192, 192, 192, 0.4);
}

/* Description */
.description .lead.part1, .description .part2, .description .part3 { display: none; }
.description hr { height: 1px; color: #aaaaaa; background-color: #aaaaaa; }

/* Walkthrough */
#part2, #part3 { display: none; }

/* Form elements */
#part1 select { width: auto; }

/* Buttons */
#download_btn { display: none; }
#buttons { text-align: center; }
#buttons a { margin: 10px; border-radius: 0; }

/* Footer */
footer div.container p {
  padding: 10px;
  text-align: center;
}

